--- a/animaciones y trazados SVG.html
+++ b/animaciones y trazados SVG.html
@@ -149,7 +149,7 @@
 
 		</div>
 
-		<form action="inicio.html">
+		<form action="index.html">
 			<input type="submit" value="Regresar">
 		</form>
 
