--- a/encabezados.html
+++ b/encabezados.html
@@ -40,7 +40,7 @@
 		</tr>
 	</table>
 
-	<form action="inicio.html">
+	<form action="index.html">
 		<input type="submit" value="Regresar">
 	</form>
 
