--- a/formularios.html
+++ b/formularios.html
@@ -80,7 +80,7 @@
 	</div>
 
 	
-	<form action="inicio.html">
+	<form action="index.html">
 		<input class="boton" type="submit" value="Regresar">
 	</form>
 
