--- a/hipervinculos.html
+++ b/hipervinculos.html
@@ -21,7 +21,7 @@
 		<a class="center" href="https://facebook.com"> Redirigir a Facebook </a>
 	</div>
 
-	<form action="inicio.html">
+	<form action="index.html">
 		<input type="submit" value="Regresar">
 	</form>
 
