--- a/imagenes.html
+++ b/imagenes.html
@@ -19,7 +19,7 @@
 		</div>
 	</div>
 
-	<form action="inicio.html">
+	<form action="index.html">
 		<input type="submit" value="Regresar">
 	</form>
 </body>
