--- a/marcos.html
+++ b/marcos.html
@@ -19,7 +19,7 @@
 		<iframe class="cuarto" src="https://www.youtube.com/embed/TnIDiLiTofc?controls=0" frameborder="0"></iframe>
 		
 
-		<form action="inicio.html">
+		<form action="index.html">
 			<input type="submit" value="Regresar">
 		</form>
 	</div>
