--- a/otros.html
+++ b/otros.html
@@ -63,7 +63,7 @@
 		<div class="degradado_radial_4 tamaños tiempo"></div>
 	</div>
 
-	<form action="inicio.html">
+	<form action="index.html">
 		<input type="submit" value="Regresar">
 	</form>
 
