--- a/tablas.html
+++ b/tablas.html
@@ -43,7 +43,7 @@
 		</table>
 	</div>
 
-	<form action="inicio.html">
+	<form action="index.html">
 		<input type="submit" value="Regresar">
 	</form>
 
